# Compiler

./: .gitignore  CMakeLists.txt  Compiler.sln  Make.bat  premake5.lua
Compiler/: Compiler.vcxproj  Compiler.vcxproj.filters  comp_info.txt  prog.s  test01.sig
Compiler/src/: Compiler.cpp  Compiler.h  CompilerInterface.cpp  CompilerInterface.h  Driver.cpp  Driver.h  Error.cpp  Error.h  ErrorHandler.cpp  ErrorHandler.h  Errors.cpp  Errors.h  Lexer.cpp  Lexer.h  Log.cpp  Log.h  Token.h  main.cpp
Compiler/src/Core/: main.cpp
Compiler/src/Core/Data/: ASTNode.h  (+6 more)
Compiler/src/Errors/: Error.cpp  Error.h  ErrorHandler.cpp  ErrorHandler.h
Compiler/src/Utilities/: CompilerInterface.cpp  CompilerInterface.h  Log.h  Timer.h
Compiler/tests/: lexer_false_test2.sig  parser_false_test1.sig  parser_false_test2.sig  parser_false_test3.sig  parser_false_test4.sig  parser_false_test5.sig  parser_true_test1.sig  parser_true_test2.sig  parser_true_test3.sig  parser_true_test4.sig
bin-int/Debug-windows-x86_64/Compiler/: Compiler.exe.recipe  ssc.exe.recipe  vc143.idb
report/: Lab1_report.docx  ~$b1_report.docx
tests/: codegen_true_test.sig  gen_true_test_exp.asm  lexer_false_test1.sig  parser_false_test1.sig  parser_false_test4.sig  parser_false_test6.sig  parser_false_test7.sig  parser_true_test1.sig  program.sig  true_test1.sig
tests/codegen/: cg_false_test1.sig  cg_true_test1_exp.asm
tests/lexer/: lexer_false_test3.sig  lexer_true_test1.sig
tests/parser/: parser_false_test2.sig  parser_false_test3.sig  parser_false_test4.sig  parser_true_test2.sig  parser_true_test3.sig
(+15 files in other folders)
